初版代码--尝试非模块化转模块化--失败！